Bmesh module: assigning to bm.select_mode crashes Blender if bmesh is empty #32779

Closed
opened 2012-10-05 15:06:02 +02:00 by CodeManX · 7 comments
Member

%%%- Start blender 2.64

  • Enter into py console:
    import bmesh
    bm = bmesh.new()
    bm.select_mode # returns set()

bm.select_mode = {'VERT'} # crashes blender, probably cause bm is an empty bmesh

Windows 7 64bit%%%

%%%- Start blender 2.64 - Enter into py console: import bmesh bm = bmesh.new() bm.select_mode # returns set() bm.select_mode = {'VERT'} # crashes blender, probably cause bm is an empty bmesh Windows 7 64bit%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%No crash for me on Mac, maybe a Windows specific issue.%%%

%%%No crash for me on Mac, maybe a Windows specific issue.%%%

%%%Doesn't crash on Linux. Also valgrind shows no errors. Any windows developers around? :)%%%

%%%Doesn't crash on Linux. Also valgrind shows no errors. Any windows developers around? :)%%%

%%%Actually, got a laptop here with windows 7 64 bit. Can not reproduce crash here using both 2.64 stable release and current trunk. Leaving for others to test..%%%

%%%Actually, got a laptop here with windows 7 64 bit. Can not reproduce crash here using both 2.64 stable release and current trunk. Leaving for others to test..%%%
Author
Member

%%%Hm... rather crashes if trying to assign bad data, e.g.

bm.select_mode = {}

or
bm.select_mode = ''%%%

%%%Hm... rather crashes if trying to assign bad data, e.g. bm.select_mode = {} or bm.select_mode = ''%%%

%%%This issue was fixed by Campbell in svn rev51105. Thanks for the report, closing.%%%

%%%This issue was fixed by Campbell in svn rev51105. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#32779
No description provided.