fix [#32779] Bmesh module: assigning to bm.select_mode crashes Blender if bmesh is empty

was missing set typecheck